--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bonanza</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="container">
-        <div id="head">
-            <h1 id="greeting">Hi, we're Banana Bonanza.</h1>
-            <h3 id="subGreeting">A group of friends that make games.</h3>
+    <div class="container container--center">
+        <div id="header">
+            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
+            <h3 id="header__sub">A group of friends that make games.</h3>
         </div>
-        <div id="navLinks">
-            <a class="navLink" href="jams.html"><div class="btn">Game Jams</div></a>
-            <a class="navLink" href="games.html"><div class="btn">Games</div></a>
-            <a class="navLink" href="about.html"><div class="btn">About Us</div></a>
-        </div>
+        <nav>
+            <a class="btn" href="jams.html">Game Jams</a>
+            <a class="btn" href="games.html">Games</a>
+            <a class="btn" href="about.html">About Us</a>
+        </nav>
     </div>
 </body>
 </html>
