--- a/jams.html
+++ b/jams.html
@@ -5,42 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bonanza - Jams</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="gamesContainer">
-        <div id="head">
-            <h1 id="greeting">Hi, we're Banana Bonanza.</h1>
+    <div class="container">
+        <div id="header">
+            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
         </div>
-        <div id="navLinks">
-            <a class="navLink" href="index.html"><div class="btn">Home</div></a>
-            <a class="navLink" href="jams.html"><div class="btn active">Game Jams</div></a>
-            <a class="navLink" href="games.html"><div class="btn">Games</div></a>
-            <a class="navLink" href="about.html"><div class="btn">About Us</div></a>
-        </div>
+        <nav>
+            <a class="btn" href="index.html">Home</a>
+            <a class="btn btn--active" href="jams.html">Game Jams</a>
+            <a class="btn" href="games.html">Games</a>
+            <a class="btn" href="about.html">About Us</a>
+        </nav>
         <div id="games">
             <div class="game">
-                <h3 class="gameTitle">I Wanna Hookshot <small>(2018)</small></h3>
-                <p class="gameDesc">A 2D platformer without the ability to walk and jump. You must complete each stage with only a hookshot. Submitted to GMTK 2018.</p>
-                <a class="gameLink" href="https://purplerta.itch.io/i-wanna-hookshot">Download on Itch.io</a>
+                <h3 class="game__title">I Wanna Hookshot <span class="game__year">(2018)</small></h3>
+                <p class="game__description">A 2D platformer without the ability to walk and jump. You must complete each stage with only a hookshot. Submitted to GMTK 2018.</p>
+                <a class="game__link" href="https://purplerta.itch.io/i-wanna-hookshot">Download on Itch.io</a>
             </div>
 
             <div class="game">
-                <h3 class="gameTitle">EnviroMetal <small>(2022)</small></h3>
-                <p class="gameDesc">A loving hippie embarks on a quest to defeat the metallic invaders and save nature. Submitted to My First Game Jam winter 2022.</p>
-                <a class="gameLink" href="https://daltonsw.itch.io/envirometal">Download on Itch.io</a>
+                <h3 class="game__title">EnviroMetal <span class="game__year">(2022)</small></h3>
+                <p class="game__description">A loving hippie embarks on a quest to defeat the metallic invaders and save nature. Submitted to My First Game Jam winter 2022.</p>
+                <a class="game__link" href="https://daltonsw.itch.io/envirometal">Download on Itch.io</a>
             </div>
 
             <div class="game">
-                <h3 class="gameTitle">InvisiHeist <small>(2022)</small></h3>
-                <p class="gameDesc">An audio-centric stealth game. Sneakily find your way to the casino dealer in each randomly generated level, with a catch: you're invisible. Submitted to GMTK 2022.</p>
-                <a class="gameLink" href="https://daltonsw.itch.io/invisiheist">Download on Itch.io</a>
+                <h3 class="game__title">InvisiHeist <span class="game__year">(2022)</small></h3>
+                <p class="game__description">An audio-centric stealth game. Sneakily find your way to the casino dealer in each randomly generated level, with a catch: you're invisible. Submitted to GMTK 2022.</p>
+                <a class="game__link" href="https://daltonsw.itch.io/invisiheist">Download on Itch.io</a>
             </div>
 
             <div class="game">
-                <h3 class="gameTitle">Cowball <small>(2023)</small></h3>
-                <p class="gameDesc">You're a cowboy who's a  ball - a cowball! Navigate your way through the desert, fight enemies, and discover powerups to beat the Slime King.</p>
-                <a class="gameLink" href="https://daltonsw.itch.io/cowball">Download on Itch.io</a>
+                <h3 class="game__title">Cowball <span class="game__year">(2023)</small></h3>
+                <p class="game__description">You're a cowboy who's a  ball - a cowball! Navigate your way through the desert, fight enemies, and discover powerups to beat the Slime King.</p>
+                <a class="game__link" href="https://daltonsw.itch.io/cowball">Download on Itch.io</a>
             </div>
         </div>
     </div>
