--- a/about.html
+++ b/about.html
@@ -4,39 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Bonanza - Jams</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Banana Bonanza - About</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="gamesContainer">
-        <div id="head">
-            <h1 id="greeting">Hi, we're Banana Bonanza.</h1>
+    <div class="container">
+        <div id="header">
+            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
         </div>
-        <div id="navLinks">
-            <a class="navLink" href="index.html"><div class="btn">Home</div></a>
-            <a class="navLink" href="jams.html"><div class="btn">Game Jams</div></a>
-            <a class="navLink" href="games.html"><div class="btn">Games</div></a>
-            <a class="navLink" href="about.html"><div class="btn active">About Us</div></a>
-        </div>
+        <nav>
+            <a class="btn" href="index.html">Home</a>
+            <a class="btn" href="jams.html">Game Jams</a>
+            <a class="btn" href="games.html">Games</a>
+            <a class="btn btn--active" href="about.html">About Us</a>
+        </nav>
         <div id="games">
             <div class="game">
-                <h3 class="gameTitle">Patrick Caldwell</h3>
-                <p class="gameDesc"><b>Hey there!</b> I help to lead the creative-side of our projects. Directing and creating art, music, and design decisions is usually my job. Outside of group work, I'm the solo developer for our upcoming games Papuru and A Guide to Life!</p>
-                <p>Twitter: <a class="twitterLink" href="https://twitter.com/PurpleRTA">@PurpleRTA</a></p>
+                <h3 class="game__title">Papuru</h3>
+                <p class="game__description">The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress, all from the comfort of your small apartment.</p>
+                <a class="game__link" href="#">In development...</a>
             </div>
 
             <div class="game">
-                <h3 class="gameTitle">Dalton Williams</h3>
-                <p class="gameDesc"><b>Howdy,</b> I'm Dalton! I'm the programming lead on the team, spearheading development work on all of our projects.</p>
-                <p>Twitter: <a class="twitterLink" href="https://twitter.com/Dalton_SW">@Dalton_SW</a></p>
+                <h3 class="game__title">A Guide to Life</h3>
+                <p class="game__description">Experience different periods of life in this short sim. Sit back and watch the world and people around you change over time.</p>
+                <a class="game__link" href="#">In development...</a>
             </div>
-
-            <div class="game">
-                <h3 class="gameTitle">Shea Murphy</h3>
-                <p class="gameDesc"><b>Yo.</b> I make music :)</p>
-                <p>Twitter: <a class="twitterLink" href="https://twitter.com/SheaPerrier">@SheaPerrier</a></p>
-            </div>
-
         </div>
     </div>
 </body>
