--- a/games.html
+++ b/games.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Bonanza - Jams</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Banana Bonanza - Games</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="gamesContainer">
-        <div id="head">
-            <h1 id="greeting">Hi, we're Banana Bonanza.</h1>
+    <div class="container">
+        <div id="header">
+            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
         </div>
-        <div id="navLinks">
-            <a class="navLink" href="index.html"><div class="btn">Home</div></a>
-            <a class="navLink" href="jams.html"><div class="btn">Game Jams</div></a>
-            <a class="navLink" href="games.html"><div class="btn active">Games</div></a>
-            <a class="navLink" href="about.html"><div class="btn">About Us</div></a>
-        </div>
+        <nav>
+            <a class="btn" href="index.html">Home</a>
+            <a class="btn" href="jams.html">Game Jams</a>
+            <a class="btn btn--active" href="games.html">Games</a>
+            <a class="btn" href="about.html">About Us</a>
+        </nav>
         <div id="games">
             <div class="game">
-                <h3 class="gameTitle">Papuru <small>(in development)</small></h3>
-                <p class="gameDesc">During a never-ending quarantine, the difference between reality and your dreams has become to blur. Explore lands of joy, mystery, and distress, all from the comfort of your small apartment.</p>
-                <a class="gameLink" href="#">Coming Soon...</a>
+                <h3 class="game__title">Papuru</h3>
+                <p class="game__description">The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress, all from the comfort of your small apartment.</p>
+                <a class="game__link" href="#">In development...</a>
             </div>
 
             <div class="game">
-                <h3 class="gameTitle">A Guide to Life <small>(in development)</small></h3>
-                <p class="gameDesc">Experience different periods of life in this short sim. Sit back and watch the world and people around you change over time.</p>
-                <a class="gameLink" href="#">Coming Soon...</a>
+                <h3 class="game__title">A Guide to Life</h3>
+                <p class="game__description">Experience different periods of life in this short sim. Sit back and watch the world and people around you change over time.</p>
+                <a class="game__link" href="#">In development...</a>
             </div>
-
         </div>
     </div>
 </body>
