Updated about page

--- a/about.html
+++ b/about.html
@@ -21,17 +21,30 @@
             <a class="btn" href="games.html">Games</a>
             <a class="btn btn--active" href="about.html">About Us</a>
         </nav>
-        <div id="games">
-            <div class="game">
-                <h3 class="game__title">Papuru</h3>
-                <p class="game__description">The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress, all from the comfort of your small apartment.</p>
-                <a class="game__link" href="#">In development...</a>
+        <div id="members">
+            <div class="member">
+                <h3 class="member__name">Patrick Caldwell</h3>
+                <p class="member__bio">Hey there! I help to lead the creative side of our projects. Outside of group work, I'm the creator of our upcoming games Papuru and A Guide to Life!</p>
+                <p class="member__social">Twitter: <a href="https://twitter.com/PurpleRTA" class="member__link">@PurpleRTA</a></p>
             </div>
 
-            <div class="game">
-                <h3 class="game__title">A Guide to Life</h3>
-                <p class="game__description">Experience different periods of life in this short sim. Sit back and watch the world and people around you change over time.</p>
-                <a class="game__link" href="#">In development...</a>
+            <div class="member">
+                <h3 class="member__name">Dalton Williams</h3>
+                <p class="member__bio">Howdy, I'm Dalton! I'm the programming lead on the team, spearheading development work on all of our projects.</p>
+                <p class="member__social">Twitter: <a href="https://twitter.com/Dalton_SW" class="member__link">@Dalton_SW</a></p>
+            </div>
+
+            <div class="member">
+                <h3 class="member__name">Shea Murphy</h3>
+                <p class="member__bio">🎵🎵🎵</p>
+                <p class="member__social">Twitter: <a href="https://twitter.com/SheaPerrier" class="member__link">@SheaPerrier</a></p>
+                <p class="member__social">Soundcloud: <a href="https://soundcloud.com/sheaperrier" class="member__link">SheaPerrier</a></p>
+            </div>
+
+            <div class="member">
+                <h3 class="member__name">Jack Sampson</h3>
+                <p class="member__bio">💩💩💩</p>
+                <p class="member__social">Twitter: <a href="https://twitter.com/throochie" class="member__link">@throochie</a></p>
             </div>
         </div>
     </div>
