--- a/games.html
+++ b/games.html
@@ -22,13 +22,13 @@
             <a class="btn" href="about.html">About Us</a>
         </nav>
         <div id="games">
-            <div class="game">
+            <div class="game game--papuru">
                 <h3 class="game__title">Papuru</h3>
                 <p class="game__description">The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress, all from the comfort of your small apartment.</p>
                 <a class="game__link" href="#">In development...</a>
             </div>
 
-            <div class="game">
+            <div class="game game--aguidetolife">
                 <h3 class="game__title">A Guide to Life</h3>
                 <p class="game__description">Experience different periods of life in this short sim. Sit back and watch the world and people around you change over time.</p>
                 <a class="game__link" href="#">In development...</a>
