--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container container--center">
         <div id="header">
-            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
+            <h1 id="header__title"><span id="header__greeting">Hi</span>, we're Banana Bonanza.</h1>
             <h3 id="header__sub">A group of friends that make games.</h3>
         </div>
         <nav>
@@ -22,5 +22,6 @@
             <a class="btn" href="about.html">About Us</a>
         </nav>
     </div>
+    <script src="assets/js/home.js"></script>
 </body>
 </html>
