Updated about us mobile layout

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             <div class="member">
                 <img class="member__img" src="assets/img/patrick.png" alt="Patrick's Icon">
                 <div class="member__info">
-                    <h3 class="member__name">Patrick Caldwell</h3>
+                    <h3 class="member__name">Patrick Caldwell<img class="member__icon" src="assets/img/patrick.png" alt="Patrick's Icon"></h3>
                     <p class="member__bio">Hey there! I help to lead the creative side of our projects. Outside of group work, I'm the creator of our upcoming games Papuru and A Guide to Life!</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/PurpleRTA" class="member__link">@PurpleRTA</a></p>
                 </div>
@@ -34,7 +34,7 @@
             <div class="member">
                 <img class="member__img" src="assets/img/dalton.jpg" alt="Dalton's Icon">
                 <div class="member__info">
-                    <h3 class="member__name">Dalton Williams</h3>
+                    <h3 class="member__name">Dalton Williams<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
                     <p class="member__bio">Howdy, I'm Dalton! I'm the programming lead on the team, spearheading development work on all of our projects.</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/Dalton_SW" class="member__link">@Dalton_SW</a></p>
                 </div>
