changed nav text

--- a/games.html
+++ b/games.html
@@ -17,9 +17,9 @@
         </div>
         <nav>
             <a class="btn" href="index.html">Home</a>
-            <a class="btn" href="jams.html">Game Jams</a>
+            <a class="btn" href="jams.html">Jams</a>
             <a class="btn btn--active" href="games.html">Games</a>
-            <a class="btn" href="about.html">About Us</a>
+            <a class="btn" href="about.html">About</a>
         </nav>
         <div id="games">
             <div class="game game--papuru">
