--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h3 id="header__sub">A group of friends that make games.</h3>
         </div>
         <nav>
-            <a class="btn" href="jams.html">Game Jams</a>
+            <a class="btn" href="jams.html">Jams</a>
             <a class="btn" href="games.html">Games</a>
-            <a class="btn" href="about.html">About Us</a>
+            <a class="btn" href="about.html">About</a>
         </nav>
     </div>
     <script src="assets/js/home.js"></script>
