Montserrat ftw + blog (why?)

--- a/blog.html
+++ b/blog.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Bonanza</title>
+    <title>Banana Bonanza - About</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 </head>
 <body>
-    <div class="container container--center">
+    <div class="container">
         <div id="header">
-            <h1 id="header__title" class="fnt--pxl"><span id="header__greeting" class="fnt--pxl">Hi</span>, we're Banana Bonanza.</h1>
-            <h3 id="header__sub" class="fnt--pxl">A group of friends that make games.</h3>
+            <h1 id="header__title" class="fnt--pxl">Hi, we're Banana Bonanza.</h1>
         </div>
         <nav>
+            <a class="btn fnt--pxl" href="index.html">Home</a>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
             <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a class="btn fnt--pxl" href="blog.html">Blog</a>
+            <a class="btn btn--active fnt--pxl" href="blog.html">Blog</a>
             <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
+        <div id="blogs">
+     
+                <a class="blog" href="blog/helloWorld.html">
+                    <h3 class="blog__title">Hello World!</h3>
+                    <p class="blog__description">An introduction to our website!</p>
+                </a>
+        </div>
     </div>
-    <script src="assets/js/home.js"></script>
 </body>
 </html>
