--- a/jams.html
+++ b/jams.html
@@ -13,13 +13,14 @@
 <body>
     <div class="container">
         <div id="header">
-            <h1 id="header__title">Hi, we're Banana Bonanza.</h1>
+            <h1 id="header__title" class="fnt--pxl">Hi, we're Banana Bonanza.</h1>
         </div>
         <nav>
-            <a class="btn" href="index.html">Home</a>
-            <a class="btn btn--active" href="jams.html">Jams</a>
-            <a class="btn" href="games.html">Games</a>
-            <a class="btn" href="about.html">About</a>
+            <a class="btn fnt--pxl" href="index.html">Home</a>
+            <a class="btn btn--active fnt--pxl" href="jams.html">Jams</a>
+            <a class="btn fnt--pxl" href="games.html">Games</a>
+            <a class="btn fnt--pxl" href="blog.html">Blog</a>
+            <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
         <div id="games">
             <div class="game game--hookshot">
