Hid the blog behind a cheat code

--- a/blog.html
+++ b/blog.html
@@ -25,8 +25,11 @@
         <div id="blogs">
      
                 <a class="blog" href="blog/helloWorld.html">
-                    <h3 class="blog__title">Hello World!</h3>
-                    <p class="blog__description">An introduction to our website!</p>
+                    <div class="blog__header">
+                        <h3 class="blog__title">Hello World!</h3>
+                        <p class="blog__date">05/08/23</p>
+                    </div>
+                    <p class="blog__description">An introduction to our new website. Hang out for a while!</p>
                 </a>
         </div>
     </div>
