--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container container--center">
         <div id="header">
             <h1 id="header__title" class="fnt--pxl"><span id="header__greeting" class="fnt--pxl">Hi</span>, we're Banana Bonanza.</h1>
-            <h3 id="header__sub" class="fnt--pxl">A group of friends that make games.</h3>
+            <h3 id="header__sub" class="fnt--pxl">A group of friends that make <span id="header__product" class="fnt--pxl" contenteditable="true">games</span>.</h3>
         </div>
         <nav>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
             <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a class="btn fnt--pxl" href="blog.html">Blog</a>
+            <a id="nav__blog" class="btn fnt--pxl" href="blog.html">Blog</a>
             <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
     </div>
