--- a/jams.html
+++ b/jams.html
@@ -19,7 +19,7 @@
             <a class="btn fnt--pxl" href="index.html">Home</a>
             <a class="btn btn--active fnt--pxl" href="jams.html">Jams</a>
             <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a class="btn fnt--pxl" href="blog.html">Blog</a>
+            <a id="nav__blog" class="btn fnt--pxl" href="blog.html">Blog</a>
             <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
         <div id="games">
