--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bonanza - About</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -26,7 +27,7 @@
      
                 <a class="blog" href="blog/helloWorld.html">
                     <div class="blog__header">
-                        <h3 class="blog__title">Hello World!</h3>
+                        <h3 class="blog__title">Hey, you found a secret!</h3>
                         <p class="blog__date">05/08/23</p>
                     </div>
                     <p class="blog__description">An introduction to our new website. Hang out for a while!</p>
