--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         </nav>
     </div>
     <script src="assets/js/home.js"></script>
-    
+    <script src="assets/js/blog.js"></script>
 </body>
 </html>
