--- a/about.html
+++ b/about.html
@@ -42,6 +42,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/blog.js"></script>
+    <script src="assets/js/secret.js"></script>
 </body>
 </html>
