--- a/games.html
+++ b/games.html
@@ -36,6 +36,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/blog.js"></script>
+    <script src="assets/js/secret.js"></script>
 </body>
 </html>
