--- a/jams.html
+++ b/jams.html
@@ -48,6 +48,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/blog.js"></script>
+    <script src="assets/js/secret.js"></script>
 </body>
 </html>
