--- a/jams.html
+++ b/jams.html
@@ -26,25 +26,25 @@
             <div class="game game--hookshot">
                 <h3 class="game__title">I Wanna Hookshot <span class="game__year">(2018)</small></h3>
                 <p class="game__description">A 2D platformer without the ability to walk and jump. You must complete each stage with only a hookshot. Submitted to GMTK 2018.</p>
-                <a class="game__link" href="https://purplerta.itch.io/i-wanna-hookshot">Download on Itch.io</a>
+                <a class="game__link" href="https://purplerta.itch.io/i-wanna-hookshot" target="_blank">Download on Itch.io</a>
             </div>
 
             <div class="game game--envirometal">
                 <h3 class="game__title">EnviroMetal <span class="game__year">(2022)</small></h3>
                 <p class="game__description">A loving hippie embarks on a quest to defeat the metallic invaders and save nature. Submitted to My First Game Jam winter 2022.</p>
-                <a class="game__link" href="https://daltonsw.itch.io/envirometal">Download on Itch.io</a>
+                <a class="game__link" href="https://daltonsw.itch.io/envirometal" target="_blank">Download on Itch.io</a>
             </div>
 
             <div class="game game--invisiheist">
                 <h3 class="game__title">InvisiHeist <span class="game__year">(2022)</small></h3>
                 <p class="game__description">An audio-centric stealth game. Sneakily find your way to the casino dealer in each randomly generated level, with a catch: you're invisible. Submitted to GMTK 2022.</p>
-                <a class="game__link" href="https://daltonsw.itch.io/invisiheist">Download on Itch.io</a>
+                <a class="game__link" href="https://daltonsw.itch.io/invisiheist" target="_blank">Download on Itch.io</a>
             </div>
 
             <div class="game game--cowball">
                 <h3 class="game__title">Cowball <span class="game__year">(2023)</small></h3>
                 <p class="game__description">You're a cowboy who's a  ball - a cowball! Navigate your way through the desert, fight enemies, and discover powerups to beat the Slime King.</p>
-                <a class="game__link" href="https://daltonsw.itch.io/cowball">Download on Itch.io</a>
+                <a class="game__link" href="https://daltonsw.itch.io/cowball" target="_blank">Download on Itch.io</a>
             </div>
         </div>
     </div>
