--- a/about.html
+++ b/about.html
@@ -45,6 +45,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/secret.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
