--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </nav>
     </div>
     <script src="assets/js/home.js"></script>
-    <script src="assets/js/secret.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
