--- a/games.html
+++ b/games.html
@@ -39,6 +39,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/secret.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
