--- a/jams.html
+++ b/jams.html
@@ -51,6 +51,6 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/secret.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
