--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
             <a class="btn fnt--pxl" href="index.html">Home</a>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
             <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a class="btn btn--active fnt--pxl" href="blog.html">Blog</a>
+            <a class="btn btn--active fnt--pxl" href="secret.html">Blog</a>
             <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
         <div id="blogs">
