--- a/games.html
+++ b/games.html
@@ -22,7 +22,7 @@
             <a class="btn fnt--pxl" href="index.html">Home</a>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
             <a class="btn btn--active fnt--pxl" href="games.html">Games</a>
-            <a id="nav__blog" class="btn fnt--pxl" href="blog.html">Blog</a>
+            <a id="nav__blog" class="btn fnt--pxl" href="secret.html">Blog</a>
             <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
         <div id="games">
