--- a/secret.html
+++ b/secret.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -22,27 +23,18 @@
             <a class="btn fnt--pxl" href="index.html">Home</a>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
             <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a id="nav__blog" class="btn fnt--pxl" href="secret.html">Blog</a>
-            <a class="btn btn--active fnt--pxl" href="about.html">About</a>
+            <a class="btn btn--active fnt--pxl" href="secret.html">Blog</a>
+            <a class="btn fnt--pxl" href="about.html">About</a>
         </nav>
-        <div id="members">
-            <div class="member">
-                <img class="member__img" src="assets/img/patrick.png" alt="Patrick's Icon">
-                <div class="member__info">
-                    <h3 class="member__name">Patrick Caldwell<img class="member__icon" src="assets/img/patrick.png" alt="Patrick's Icon"></h3>
-                    <p class="member__bio">Hey there! I help to lead the creative side of our projects. Outside of group work, I'm the creator of our upcoming games Papuru and A Guide to Life!</p>
-                    <p class="member__social">Twitter: <a href="https://twitter.com/PurpleRTA" target="_blank" class="member__link">@PurpleRTA</a></p>
-                </div>
-            </div>
-
-            <div class="member">
-                <img class="member__img" src="assets/img/dalton.jpg" alt="Dalton's Icon">
-                <div class="member__info">
-                    <h3 class="member__name">Dalton Williams<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
-                    <p class="member__bio">Howdy, I'm Dalton! I'm the programming lead on the team, spearheading development work on all of our projects.</p>
-                    <p class="member__social">Twitter: <a href="https://twitter.com/Dalton_SW" target="_blank" class="member__link">@Dalton_SW</a></p>
-                </div>
-            </div>
+        <div id="blogs">
+     
+                <a class="blog" href="blog/helloWorld.html">
+                    <div class="blog__header">
+                        <h3 class="blog__title">Hey, you found a secret!</h3>
+                        <p class="blog__date">05/08/23</p>
+                    </div>
+                    <p class="blog__description">An introduction to our new website. Hang out for a while!</p>
+                </a>
         </div>
     </div>
     <script src="assets/js/app.js"></script>
