--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container container--center">
         <div id="header">
             <h1 id="header__title" class="fnt--pxl"><span id="header__greeting" class="fnt--pxl">Hi</span>, we're Banana Bonanza.</h1>
-            <h3 id="header__sub" class="fnt--pxl">A group of friends that make <span id="header__product" class="fnt--pxl" contenteditable="true">games</span>.</h3>
+            <h3 id="header__sub" class="fnt--pxl">A group of friends that make <span id="header__product" class="fnt--pxl">games</span>.</h3>
         </div>
         <nav>
             <a class="btn fnt--pxl" href="jams.html">Jams</a>
