--- a/404.html
+++ b/404.html
@@ -15,22 +15,23 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
 </head>
 <body>
-    <div class="container container--center">
+    <div class="container">
         <div id="header" class="header--404">
             <h1 id="header__title" class="fnt--pxl title--404">404</h1>
+            <nav>
+                <a class="btn fnt--pxl" href="index.html">Home</a>
+                <a class="btn fnt--pxl" href="jams.html">Jams</a>
+                <a class="btn fnt--pxl" href="games.html">Games</a>
+                <a id="nav__blog" class="btn fnt--pxl" href="secret.html">Blog</a>
+                <a class="btn fnt--pxl" href="about.html">About</a>
+            </nav>
             <h3 id="header__sub" class="fnt--pxl sub--404">
-                <p><i class="fa-solid fa-shuffle btn btn--spin" id="shuffle--404"></i></p>
+            
                 <iframe id="video--404" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="encrypted-media; gyroscope;"></iframe>
+                <p><i class="fa-solid fa-shuffle btn btn--spin" id="shuffle--404"></i></p>
                 
             </h3>
         </div>
-        <nav>
-            <a class="btn fnt--pxl" href="index.html">Home</a>
-            <a class="btn fnt--pxl" href="jams.html">Jams</a>
-            <a class="btn fnt--pxl" href="games.html">Games</a>
-            <a id="nav__blog" class="btn fnt--pxl" href="secret.html">Blog</a>
-            <a class="btn fnt--pxl" href="about.html">About</a>
-        </nav>
     </div>
     <script src="assets/js/app.js"></script>
 </body>
