--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
             </nav>
             <h3 id="header__sub" class="fnt--pxl sub--404">
             
-                <iframe id="video--404" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="encrypted-media; gyroscope;"></iframe>
+                <iframe id="video--404" src="" title="YouTube video player" frameborder="0" allow="encrypted-media; gyroscope;"></iframe>
                 <p><i class="fa-solid fa-shuffle btn btn--spin" id="shuffle--404"></i></p>
                 
             </h3>
