--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 <img class="member__img" src="assets/img/patrick.png" alt="Patrick's Icon">
                 <div class="member__info">
                     <h3 class="member__name">Patrick Caldwell<img class="member__icon" src="assets/img/patrick.png" alt="Patrick's Icon"></h3>
-                    <p class="member__bio">Hey there! I help to lead the creative side of our projects. Outside of group work, I'm the creator of our upcoming games Papuru and A Guide to Life!</p>
+                    <p class="member__role">Creative Lead</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/PurpleRTA" target="_blank" class="member__link">@PurpleRTA</a></p>
                 </div>
             </div>
@@ -39,8 +39,26 @@
                 <img class="member__img" src="assets/img/dalton.jpg" alt="Dalton's Icon">
                 <div class="member__info">
                     <h3 class="member__name">Dalton Williams<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
-                    <p class="member__bio">Howdy, I'm Dalton! I'm the programming lead on the team, spearheading development work on all of our projects.</p>
+                    <p class="member__role">Programming Lead</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/Dalton_SW" target="_blank" class="member__link">@Dalton_SW</a></p>
+                </div>
+            </div>
+
+            <div class="member">
+                <img class="member__img" src="assets/img/shea.jpg" alt="Dalton's Icon">
+                <div class="member__info">
+                    <h3 class="member__name">Shea Murphy<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
+                    <p class="member__role">Music</p>
+                    <p class="member__social">Twitter: <a href="https://twitter.com/SheaPerrier" target="_blank" class="member__link">@SheaPerrier</a></p>
+                </div>
+            </div>
+
+            <div class="member">
+                <img class="member__img" src="assets/img/jack.jpg" alt="Dalton's Icon">
+                <div class="member__info">
+                    <h3 class="member__name">Jack Sampson<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
+                    <p class="member__role">Design</p>
+                    <p class="member__social">Twitter: <a href="https://twitter.com/Throochie" target="_blank" class="member__link">@Throochie</a></p>
                 </div>
             </div>
         </div>
