--- a/about.html
+++ b/about.html
@@ -45,22 +45,41 @@
             </div>
 
             <div class="member">
-                <img class="member__img" src="assets/img/shea.jpg" alt="Dalton's Icon">
+                <img class="member__img" src="assets/img/shea.jpg" alt="Shea's Icon">
                 <div class="member__info">
-                    <h3 class="member__name">Shea Murphy<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
-                    <p class="member__role">Music</p>
+                    <h3 class="member__name">Shea Murphy<img class="member__icon" src="assets/img/shea.jpg" alt="Shea's Icon"></h3>
+                    <p class="member__role">Composer</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/SheaPerrier" target="_blank" class="member__link">@SheaPerrier</a></p>
                 </div>
             </div>
 
             <div class="member">
-                <img class="member__img" src="assets/img/jack.jpg" alt="Dalton's Icon">
+                <img class="member__img" src="assets/img/jack.jpg" alt="Jack's Icon">
                 <div class="member__info">
-                    <h3 class="member__name">Jack Sampson<img class="member__icon" src="assets/img/dalton.jpg" alt="Dalton's Icon"></h3>
-                    <p class="member__role">Design</p>
+                    <h3 class="member__name">Jack Sampson<img class="member__icon" src="assets/img/jack.jpg" alt="Jack's Icon"></h3>
+                    <p class="member__role">Game Design</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/Throochie" target="_blank" class="member__link">@Throochie</a></p>
                 </div>
             </div>
+
+            <div class="member">
+                <img class="member__img" src="assets/img/jess.jpg" alt="Jess's Icon">
+                <div class="member__info">
+                    <h3 class="member__name">Jess Kasper<img class="member__icon" src="assets/img/jess.jpg" alt="Jess's Icon"></h3>
+                    <p class="member__role">Programming</p>
+                    <p class="member__social">Twitter: <a href="https://twitter.com/PurpleGhostKasp" target="_blank" class="member__link">@PurpleGhostKasp</a></p>
+                </div>
+            </div>
+
+            <div class="member">
+                <img class="member__img" src="assets/img/wooferzfg.jpg" alt="Woofer's Icon">
+                <div class="member__info">
+                    <h3 class="member__name">WooferZFG<img class="member__icon" src="assets/img/wooferzfg.jpg" alt="Woofer's Icon"></h3>
+                    <p class="member__role">Programming</p>
+                    <p class="member__social">Twitter: <a href="https://twitter.com/WooferZFG" target="_blank" class="member__link">@WooferZFG</a></p>
+                </div>
+            </div>
+
         </div>
     </div>
     <script src="assets/js/app.js"></script>
