--- a/about.html
+++ b/about.html
@@ -63,6 +63,15 @@
             </div>
 
             <div class="member">
+                <img class="member__img" src="assets/img/kevin.png" alt="Kevin's Icon">
+                <div class="member__info">
+                    <h3 class="member__name">Kevin Kotleba<img class="member__icon" src="assets/img/kevin.png" alt="Kevin's Icon"></h3>
+                    <p class="member__role">Art</p>
+                    <p class="member__social">Twitter: <a href="https://twitter.com/TheSneakySpy" target="_blank" class="member__link">@TheSneakySpy</a></p>
+                </div>
+            </div>
+
+            <div class="member">
                 <img class="member__img" src="assets/img/jess.jpg" alt="Jess's Icon">
                 <div class="member__info">
                     <h3 class="member__name">Jess Kasper<img class="member__icon" src="assets/img/jess.jpg" alt="Jess's Icon"></h3>
