--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
         </nav>
         <div id="members">
             <div class="member">
-                <img class="member__img" src="assets/img/patrick.png" alt="Patrick's Icon">
+                <img class="member__img member__img--patrick" src="assets/img/patrick.png" alt="Patrick's Icon">
                 <div class="member__info">
-                    <h3 class="member__name">Patrick Caldwell<img class="member__icon" src="assets/img/patrick.png" alt="Patrick's Icon"></h3>
+                    <h3 class="member__name">Patrick Caldwell<img class="member__icon member__img--patrick" src="assets/img/patrick.png" alt="Patrick's Icon"></h3>
                     <p class="member__role">Creative Lead</p>
                     <p class="member__social">Twitter: <a href="https://twitter.com/PurpleRTA" target="_blank" class="member__link">@PurpleRTA</a></p>
                 </div>
