--- a/games.html
+++ b/games.html
@@ -26,20 +26,20 @@
         <a class="btn fnt--pxl" href="about.html">About</a>
       </nav>
       <div id="games">
-        <div class="game game--papuru">
-          <h3 class="game__title">Papuru</h3>
-          <p class="game__description">
-            The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress,
-            all from the comfort of your small apartment.
-          </p>
-          <a class="game__link" href="#">In development...</a>
-        </div>
-
         <div class="game game--aguidetolife">
           <h3 class="game__title">A Guide to Life</h3>
           <p class="game__description">
             A short story-focused adventure game. Experience different periods of life as you watch your relationships, the world, and the people
             around you change over several years.
+          </p>
+          <a class="game__link" href="https://www.youtube.com/watch?v=fzTXSc8qwvY" target="_blank">View Trailer</a>
+        </div>
+
+        <div class="game game--papuru">
+          <h3 class="game__title">Papuru</h3>
+          <p class="game__description">
+            The difference between reality and your dreams has blurred during a never-ending quarantine. Explore lands of joy, mystery, and distress,
+            all from the comfort of your small apartment.
           </p>
           <a class="game__link" href="#">In development...</a>
         </div>
