--- a/games.html
+++ b/games.html
@@ -29,7 +29,7 @@
         <div class="game game--aguidetolife">
           <h3 class="game__title">A Guide to Life</h3>
           <p class="game__description">
-            A short story-focused adventure game. Experience different periods of life as you watch your relationships, the world, and the people
+            A short story-focused adventure game. Experience three different periods of life as you watch your relationship, the world, and the people
             around you change over several years.
           </p>
           <a class="game__link" href="https://www.youtube.com/watch?v=fzTXSc8qwvY" target="_blank">View Trailer</a>
